--- a/config/config.json
+++ b/config/config.json
@@ -1,16 +1,16 @@
 {
   "development": {
-    "database": "sequelize_migrations_development",
+    "database": "sequelize_migration_development",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
-    "database": "sequelize_migrations_test",
+    "database": "sequelize_migration_test",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
-    "database": "sequelize_migrations",
+    "database": "sequelize_migration",
     "host": "127.0.0.1",
     "dialect": "postgres"
   }
